# video-semantic-search

./: .gitignore  README.md  app.py  main.ipynb  main.py  pyproject.toml
src/: __init__.py  document_search.py  image_search.py  video_search.py
